--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
             <h1> WE CARE </h1>
             <h2> About Your Pet </h2>
-            <p> Lorem ipsum dolor sit amet consecteturad cing elit aenean a justo quis mauris hendri pellentesque eget at ipsumuis cursusturpi.</p>
+            <p> Lorem ipsum dolor sit amet consecteturad cing elit aenean justo quis mauris hendri pellentesque eget at ipsumuis cursusturpi.</p>
             <button class="BOTAO-VERDE"> EXPLORE </button>
         </div>
         
